--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<header id="header">
 			<div class="title">Status: (-_o)</div>
 			<div class="head-buttons-block">
-				<div class="buttons projects">My projects</div>
-				<div class="buttons blog">Diary</div>
-				<div class="buttons links">Social</div>
+				<div class="buttons projects"><a href="pages/projects.html">My projects</a></div>
+				<div class="buttons blog"><a href="pages/diary.html">Diary</a></div>
+				<div class="buttons links"><a href="pages/social.html">Social</a></div>
 			</div>
 		</header>
 		<main>
