--- a/pages/social.html
+++ b/pages/social.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My diary</title>
+        <title>My links</title>
         <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
