--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Work in Pwogwess</title>
+		<title>Nuppet labs</title>
 		<link rel="stylesheet" type="text/css" href="styles/main.css">
 	</head>
 	<body>
@@ -14,15 +14,17 @@
 			</div>
 		</header>
 		<main>
-			<div class="main main-introduction">Hello there</div>
+			<div class="main-header main-introduction">Hello there</div>
 			<article class="main main-text">
-				So... Who am I? Well. Web-designer, barmaid, idiot? Somewhere there.
+				So... Who am I? Well. Web-designer, barmaid, idiot? Somewhere there.</br>
 				This place is more or less just my personal storage or calling card.
-				Feel free to explore though.
+			</article>
+
+			<div class="main-header main-introduction">What's going on here?</div>
+			<article class="main main-text">
+				Hard to say... maybe try looking around! There are some thing around here.</br>
+				But I am not sure which... Eh. Just do it, ok? Please?
 			</article>
 		</main>
-		<footer>
-			
-		</footer>
 	</body>
 </html>
