Edited main page a bit

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	</head>
 	<body>
 		<header id="header">
-			<div class="title">Status: (-_o)</div>
+			<div class="title">Status: Awake</div>
 			<div class="head-buttons-block">
 				<div class="buttons projects"><a href="pages/projects.html">My projects</a></div>
-				<div class="buttons blog"><a href="pages/diary.html">Diary</a></div>
+				<div class="buttons diary"><a href="pages/diary.html">Diary</a></div>
 				<div class="buttons links"><a href="pages/social.html">Social</a></div>
 			</div>
 		</header>
@@ -19,11 +19,9 @@
 				So... Who am I? Well. Web-designer, barmaid, idiot? Somewhere there.</br>
 				This place is more or less just my personal storage or calling card.
 			</article>
-
 			<div class="main-header main-introduction">What's going on here?</div>
 			<article class="main main-text">
-				Hard to say... maybe try looking around! There are some thing around here.</br>
-				But I am not sure which... Eh. Just do it, ok? Please?
+				<p>It is supposed to be some presentation website but I dont have much to show. Work in progress, ya know?</p>
 			</article>
 		</main>
 	</body>
