Changed Diary to notes, more appropriate

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 			<div class="title">Status: Awake</div>
 			<div class="head-buttons-block">
 				<div class="buttons projects"><a href="pages/projects.html">My projects</a></div>
-				<div class="buttons diary"><a href="pages/diary.html">Diary</a></div>
+				<div class="buttons notes"><a href="pages/diary.html">Notes</a></div>
 				<div class="buttons links"><a href="pages/social.html">Social</a></div>
 			</div>
 		</header>
 		<main>
 			<div class="main-header main-introduction">Hello there</div>
 			<article class="main main-text">
-				So... Who am I? Well. Web-designer, barmaid, idiot? Somewhere there.</br>
-				This place is more or less just my personal storage or calling card.
+				<p>So... Who am I? Well. Web-designer, barmaid, idiot? Somewhere there.</p>
+				<p>This place is more or less just my personal storage or calling card.</p>
 			</article>
 			<div class="main-header main-introduction">What's going on here?</div>
 			<article class="main main-text">
-				<p>It is supposed to be some presentation website but I dont have much to show. Work in progress, ya know?</p>
+				<p>It is supposed to be some welcome card website but I dont have much to show. Work in progress, ya know?</p>
 			</article>
 		</main>
 	</body>
