Added info on main chars in fighting games

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<div class="title">Status: Awake</div>
 			<div class="head-buttons-block">
 				<div class="buttons projects"><a href="pages/projects.html">My projects</a></div>
-				<div class="buttons notes"><a href="pages/diary.html">Notes</a></div>
+				<div class="buttons notes"><a href="pages/notes.html">Notes</a></div>
 				<div class="buttons links"><a href="pages/social.html">Social</a></div>
 			</div>
 		</header>
