--- a/pages/notes.html
+++ b/pages/notes.html
@@ -1,17 +1,69 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My diary</title>
-        <link rel="stylesheet" href="../styles/main.css">
-    </head>
-    <body>
-        <header id="header">
-			<div class="title">Status: (-_o)</div>
-			<div class="head-buttons-block">
-				<div class="buttons menu"><a href="../index.html">Main menu</a></div>
-				<div class="buttons projects"><a href="projects.html">My projects</a></div>
-				<div class="buttons links"><a href="social.html">Social</a></div>
-			</div>
-		</header>
-    </body>
+   <head>
+      <title>Note stuff</title>
+      <link rel="stylesheet" href="../styles/main.css">
+   </head>
+   <body>
+      <header id="header">
+         <div class="title">Alive</div>
+         <div class="head-buttons-block">
+         <div class="buttons menu"><a href="../index.html">Main menu</a></div>
+         <div class="buttons projects"><a href="projects.html">My projects</a></div>
+         <div class="buttons links"><a href="social.html">Social</a></div>
+      </header>
+      <main>
+         <div class="main-header main-introduction">Gaaaaaaaaaaames</div>
+         <article class="main main-text">
+            <p>I play a lot of random stuff but for now I focus on fighting and some free flowing combo games. (Slashers and some other)</p>
+            <p><ul>
+               <b>Main fightings:</b>
+               <li>The King of fighters XV (mains and some notes for myself below)</li>
+               <li>The King of fighters 2002UM (mains and some notes for myself below)</li>
+               <li>DNF Duel (mains and some notes for myself below)</li>
+               <li>Melty Blood (both Type Lumina and Accent again)</li>
+            </ul></p>
+            <p><ul>
+               <b>Other stuff I play often:</b>
+               <li>Bomb Rush Cyberfunk (link to personal review)</li>
+               <li>Kingdom Hearts 2 Final mix</li>
+               <li>Hi-Fi Rush (link to sorta review and notes on controls)</li>
+               <li>Devil May Cry 4 Special Edition (maining Trish with pretty good Aqua skin)</li>
+               <li>Project Moon games (Lobotomy Corp, Library of Ruina and Limbus Company)</li>
+            </ul></p>
+         </article>
+         <div class="main-header main-introduction">Mains in Fightan</div>
+         <article class="main main-text">
+            <h1>The King of Fighters XV and The king of fighters 2002UM:</h1>
+            <h2><b>Leona Heidern</b></h2>
+            <p>Has a pretty good story and also I like how she breaks usual way charge characters work beign rushdown even with looking like she needs a setup.</p>
+            <p><h3><a href = "https://dreamcancel.com/wiki/The_King_of_Fighters_XV/Leona_Heidern">Link to Wiki</a></h3></p>
+            <h2><b>Shermie</b></h2>
+            <p>Has strangely lot amounts of stuff you could find and practice. (Also I just love the design being bascially female hentai protagonist)</p>
+            <p><h3><a href = "https://dreamcancel.com/wiki/The_King_of_Fighters_XV/Shermie">Link to Wiki</a></h3></p>
+            <h2><b>Orochi Shermie</b></h2>
+            <p>Same idea with design but has additional traits of being more zoning. Sometimes helps catching people off guard. (And why did they remove her dp? They didnt even add anything new in its place)</p>
+            <p><h3><a href = "https://dreamcancel.com/wiki/The_King_of_Fighters_XV/Orochi_Shermie">Link to Wiki</a></h3></p>               
+            <h2><b>Blue Mary</b></h2>
+            <p>She got me interested in fighting games in general. Simple but good design and story (plus the music, MUSIC). Charge and taser are pretty amazing.</p>				
+            <p><h3><a href = "https://dreamcancel.com/wiki/The_King_of_Fighters_XV/Blue_Mary">Link to Wiki</a></h3></p>               
+            <h2><b>Angel (Anhel?)</b></h2>
+            <p>Average Mexican woman. The best character KOF ever produced and WILL ever produce. (kidding, I just love her) Might be really technically but if you start thinking in more like 3d fighting style, you will understand her better.</p>				
+            <p><h3><a href = "https://dreamcancel.com/wiki/The_King_of_Fighters_XV/Ángel">Link to Wiki</a></h3></p>               
+            <h2><b>Bonnie Jenet</b></h2>
+            <p>She comes from Garou in which I also relied on her a lot. Evne if its kinda shaming to admit. Being more modern char her design functions much better with new design and its kinda impressive how well her moveset converts to KOF.</p>				
+            <p><h3><a href = "https://dreamcancel.com/wiki/The_King_of_Fighters_XV/B.Jenet">Link to Wiki</a></h3></p>
+            <h1>DNF Duel:</h1>
+            <h2><b>Striker</b></h2>
+            <p>Still waiting for female grappler. But this aside, she has free flow which feels amazing. You just do what you want once you get an opening and then it might even kill.</p>                
+            <p><h3><a href = "https://www.dustloop.com/w/DNFD/Striker">Link to Wiki</a></h3></p>
+            <h2><b>Launcher</b></h2>
+            <p>Just finding her pretty cool in terms of variety of weapons visually.</p>
+            <p><h3><a href = "https://www.dustloop.com/w/DNFD/Launcher">Link to Wiki</a></h3></p>               
+            <h1>Melty Blood:</h1>
+            <h2><b>Arcr and WArc</b></h2>
+            <p>Liking both visually and in gameplay they offer me opposite but at same time enjoyable ideas. Arc relies on rushdown and opening opponent while WArc is more about control and zoning.</p>
+         </article>
+      </main>
+   </body>
 </html>
